# PassExamAi

./: LICENCE  README.md  logs.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/ai/: exam_generator.py  exercise_generator.py  lesson_generator.py  llm_client.py  roadmap_generator.py
backend/app/core/: auth.py  config.py  deps.py
backend/app/rag/: embeddings.py  ingestion.py
backend/app/schemas/: chapter.py  documents.py  exam.py  roadmap.py
backend/app/web/: firecrawl_client.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend-claude/: package-lock.json
frontend-claude/src/app/: layout.tsx
frontend-claude/src/app/(app)/chapters/: page.tsx
frontend-claude/src/app/(app)/chapters/[id]/: page.tsx
frontend-claude/src/app/(app)/roadmap/: page.tsx
frontend-claude/src/app/(app)/upload/: page.tsx
frontend-claude/src/app/(auth)/: layout.tsx
frontend-claude/src/app/(auth)/signup/: page.tsx
frontend-claude/src/styles/: globals.css
frontend/src/app/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/exam/: page.tsx
frontend/src/app/(app)/exercises/: page.tsx
frontend/src/app/(app)/progress/: page.tsx
frontend/src/app/(app)/results/: page.tsx
frontend/src/app/(app)/roadmap/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: Icon.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/types/: index.ts
